fastened computations of analogies by using lambda

--- a/word_embeddings_king_queen.ipynb
+++ b/word_embeddings_king_queen.ipynb
@@ -158,14 +158,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            0         1        2         3\n",
+      "the  0.418000  0.249680 -0.41242  0.121700\n",
+      ",    0.013441  0.236820 -0.16899  0.409510\n",
+      ".    0.151640  0.301770 -0.16763  0.176840\n",
+      "of   0.708530  0.570880 -0.47160  0.180480\n",
+      "to   0.680470 -0.039263  0.30186 -0.177920\n",
+      "and  0.268180  0.143460 -0.27877  0.016257\n",
+      "in   0.330420  0.249950 -0.60874  0.109230\n",
+      "a    0.217050  0.465150 -0.46757  0.100820\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "the    0.782052\n",
+      ",      0.569733\n",
+      ".      0.487448\n",
+      "of     1.053425\n",
+      "to     0.686611\n",
+      "and    0.611121\n",
+      "in     0.938873\n",
+      "a      0.820469\n",
+      "dtype: float64\n",
+      "(array([3]),)\n",
+      "of\n",
+      "<class 'str'>\n",
+      "the    2\n",
+      ",      1\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# scribble\n",
+    "embedding_test = embedding.iloc[:8, :4]\n",
+    "print(embedding_test)\n",
+    "\n",
+    "test_array = [0.1, 0.2, 0.3, 0.1]\n",
+    "\n",
+    "distances = embedding_test.apply(lambda x: dist1(x, test_array), axis=1)\n",
+    "print(type(distances))\n",
+    "\n",
+    "print(distances)\n",
+    "max_value = np.max(distances)\n",
+    "print(np.where(distances == max_value))\n",
+    "\n",
+    "print(np.argmax(distances))\n",
+    "print(type(np.argmax(distances)))\n",
+    "print(np.argsort(distances)[:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
     "# king - man = X - woman\n",
     "# <=> X = woman - man + king\n",
     "# I wanted to solve this on my own, but it does not converge\n",
-    "def find_analogies_lena(word1, word2, word3, embedding):\n",
+    "def find_analogies_ma(word1, word2, word3, embedding):\n",
     "    \n",
     "    for word in [word1, word2, word3]:\n",
     "        if word.lower() not in embedding.index:\n",
@@ -177,29 +233,49 @@
     "    woman = embedding.loc[word3.lower()]\n",
     "    searched_vector = woman - man + king\n",
     "    \n",
-    "    print(king, man, woman, searched_vector)\n",
-    "    \n",
-    "    #jetzt brauche ich eine Matrix, die mir die distanz searched_vector - word gibt\n",
-    "    #pd_distances = pd.DataFrame(columns = embedding.index)\n",
-    "    \n",
-    "    #takes several minutes\n",
-    "    #for word in embedding.index:\n",
-    "    #    pd_distances[word] = dist1(searched_vector, embedding.loc[word])\n",
-    "    \n",
-    "    #print('And the searched vector is: ', searched_vector)\n",
-    "    \n",
     "    print('computing distances')   \n",
-    "    columns = embedding.index\n",
-    "    embedding['Dist_to_word'] = embedding.apply(lambda row: dist1(searched_vector, row[columns]), axis=1)    \n",
     "    \n",
-    "    print(embedding.head())\n",
+    "    distances = embedding.apply(lambda x: dist1(x, searched_vector), axis=1)\n",
+    "    print(f'nearest words: {all_distances.sort_values()[:3]}')\n",
     "    \n",
-    "    print(pd_distances.loc[0:10, 0:10])"
+    "    return all_distances.sort_values()[:1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "computing distances\n",
+      "nearest words: king     2.602624\n",
+      "ruler    4.369554\n",
+      "ii       4.400222\n",
+      "dtype: float64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "king    2.602624\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "find_analogies_ma('man', 'woman', 'king', embedding)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,14 +324,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Main:"
+    "# 'Main':"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading word embeddings word to vec from path ../large_files/glove.6B/glove.6B.50d.txt\n",
+      "line number 200000\n",
+      "soroca 0.049805 -0.92157 -0.78814 0.40001 0.73747 0.23841 1.0884 0.74811 0.35275 -0.092519 0.068657 -1.5069 0.71963 -0.62382 0.42556 -0.12594 0.12767 0.48246 0.747 0.95415 -0.61376 -0.41512 -0.04666 0.91667 -0.70671 0.71371 -0.09069 0.63914 -0.22234 -0.51031 -1.009 -0.93208 0.53891 -0.32442 0.060975 0.12915 -0.17024 0.29168 0.14596 0.18409 -0.16361 0.21103 -0.092295 -0.49671 -1.3887 0.29717 0.070581 -0.19783 -0.62638 0.25806\n",
+      "\n",
+      "line number 400000\n",
+      "sandberger 0.072617 -0.51393 0.4728 -0.52202 -0.35534 0.34629 0.23211 0.23096 0.26694 0.41028 0.28031 0.14107 -0.30212 -0.21095 -0.10875 -0.33659 -0.46313 -0.40999 0.32764 0.47401 -0.43449 0.19959 -0.55808 -0.34077 0.078477 0.62823 0.17161 -0.34454 -0.2066 0.1323 -1.8076 -0.38851 0.37654 -0.50422 -0.012446 0.046182 0.70028 -0.010573 -0.83629 -0.24698 0.6888 -0.17986 -0.066569 -0.48044 -0.55946 -0.27594 0.056072 -0.18907 -0.59021 0.55559\n",
+      "\n",
+      "total number of entries found:  400000. Dimension: 50\n"
+     ]
+    }
+   ],
    "source": [
     "glove_path = '../large_files/glove.6B/glove.6B.50d.txt'\n",
     "\n",
@@ -375,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -383,14 +474,22 @@
      "output_type": "stream",
      "text": [
       "motivation - man = satisfaction - woman\n",
+      "success - man = recognition - woman\n",
+      "fun - man = kids - woman\n",
+      "love - woman = me - man\n",
+      "love - man = mother - woman\n",
       "king - man = queen - woman\n",
+      "money - man = paying - woman\n",
+      "sex - man = sexual - woman\n",
       "france - paris = britain - london\n",
       "france - paris = italy - rome\n",
       "paris - france = rome - italy\n",
       "december - november = july - june\n",
       "miami - florida = houston - texas\n",
       "einstein - scientist = matisse - painter\n",
-      "china - rice = chinese - bread\n",
+      "rice - china = bacon - germany\n",
+      "beer - germany = drink - japan\n",
+      "tree - forest = devotees - flock\n",
       "man - woman = he - she\n",
       "man - woman = uncle - aunt\n",
       "man - woman = brother - sister\n",
@@ -398,8 +497,7 @@
       "man - woman = brother - friend\n",
       "man - woman = actor - actress\n",
       "man - woman = father - mother\n",
-      "heir - heiress = queen - princess\n",
-      "february - january = october - november\n"
+      "heir - heiress = queen - princess\n"
      ]
     }
    ],
@@ -409,14 +507,25 @@
     "word3 = 'woman'\n",
     "#find_analogies_Lena(embedding, word1, word2, word3) # this is slow AF\n",
     "find_analogies(word1, word2, word3, D, index_to_word)\n",
+    "find_analogies('success', 'man', 'woman',  D, index_to_word)\n",
+    "find_analogies('fun', 'man', 'woman',  D, index_to_word)\n",
+    "find_analogies('love', 'woman', 'man',  D, index_to_word)\n",
+    "find_analogies('love', 'man', 'woman',  D, index_to_word)\n",
+    "\n",
     "find_analogies('king', 'man', 'woman',  D, index_to_word)\n",
+    "find_analogies('money', 'man', 'woman',  D, index_to_word)\n",
+    "find_analogies('sex', 'man', 'woman',  D, index_to_word)\n",
     "find_analogies('france', 'paris', 'london',  D, index_to_word)\n",
     "find_analogies('france', 'paris', 'rome',  D, index_to_word)\n",
     "find_analogies('paris', 'france', 'italy',  D, index_to_word)\n",
     "find_analogies('december', 'november', 'june',  D, index_to_word)\n",
     "find_analogies('miami', 'florida', 'texas',  D, index_to_word)\n",
     "find_analogies('einstein', 'scientist', 'painter',  D, index_to_word)\n",
-    "find_analogies('china', 'rice', 'bread',  D, index_to_word)\n",
+    "find_analogies('rice', 'china', 'germany',  D, index_to_word)\n",
+    "find_analogies('beer', 'germany', 'japan',  D, index_to_word)\n",
+    "\n",
+    "find_analogies('tree', 'forest', 'flock',  D, index_to_word)\n",
+    "\n",
     "find_analogies('man', 'woman', 'she',  D, index_to_word)\n",
     "find_analogies('man', 'woman', 'aunt',  D, index_to_word)\n",
     "find_analogies('man', 'woman', 'sister',  D, index_to_word)\n",
@@ -424,8 +533,7 @@
     "find_analogies('man', 'woman', 'friend',  D, index_to_word)\n",
     "find_analogies('man', 'woman', 'actress',  D, index_to_word)\n",
     "find_analogies('man', 'woman', 'mother',  D, index_to_word)\n",
-    "find_analogies('heir', 'heiress', 'princess',  D, index_to_word)\n",
-    "find_analogies('february', 'january', 'november',  D, index_to_word)"
+    "find_analogies('heir', 'heiress', 'princess',  D, index_to_word)"
    ]
   },
   {
