--- a/notebooks/word_embeddings.ipynb
+++ b/notebooks/word_embeddings.ipynb
@@ -42,19 +42,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "from builtins import range\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import os"
+    "import os\n",
+    "import logging"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,34 +65,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import boto3\n",
-    "from botocore.exceptions import ClientError"
+    "logging.basicConfig(level=logging.DEBUG)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pathlib\n",
-    "'/Users/magdalena.aretz' in str(pathlib.Path('.').parent.resolve())"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -104,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# connect to s3"
+    "# define paths"
    ]
   },
   {
@@ -121,12 +107,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "glove_path_en = '../data/glove.6B.100d.txt'\n",
-    "glove_path_de = '../data/GloVe_vectors_de.txt'"
+    "glove_path_en = ['../data/glove.6B.100d.txt']\n",
+    "glove_path_de = ['../data/GloVe_vectors_de_part_01.txt', '../data/GloVe_vectors_de_part_02.txt']"
    ]
   },
   {
@@ -205,17 +191,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading word embeddings word to vec from path ../data/glove.6B.100d.txt, num lines: 0\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "400000it [00:07, 52615.12it/s]\n"
+      "400000it [00:07, 55149.25it/s]\n"
      ]
     },
     {
@@ -223,13 +202,13 @@
      "output_type": "stream",
      "text": [
       "total number of entries found:  400000. Dimension: 100\n",
-      "CPU times: user 21.5 s, sys: 1.01 s, total: 22.5 s\n",
-      "Wall time: 22.5 s\n"
+      "CPU times: user 21 s, sys: 894 ms, total: 21.9 s\n",
+      "Wall time: 21.9 s\n"
      ]
     }
    ],
    "source": [
-    "%time glove_embedding_en = Embedding(language='en', path=glove_path_en)"
+    "%time glove_embedding_en = Embedding(language='en', path_list=glove_path_en)"
    ]
   },
   {
@@ -355,29 +334,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading word embeddings word to vec from path ../data/GloVe_vectors_de.txt, num lines: 0\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1309281it [01:04, 20310.47it/s]\n"
+      "654638it [00:30, 21174.42it/s]\n",
+      "654640it [00:31, 21111.93it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total number of entries found:  1309281. Dimension: 300\n",
-      "(1309281, 300)\n"
+      "total number of entries found:  1309278. Dimension: 300\n",
+      "(1309278, 300)\n"
      ]
     },
     {
@@ -467,20 +440,21 @@
        "[1 rows x 300 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "glove_embedding_de = Embedding(language='de', path=glove_path_de)\n",
+    "#1.3 Mio entries => takes about 1000sec on local machine 1309281\n",
+    "glove_embedding_de = Embedding(language='de', path_list=glove_path_de)\n",
     "print(glove_embedding_de.embedding.shape)\n",
     "glove_embedding_de.embedding.head(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +502,7 @@
      "output_type": "stream",
      "text": [
       "(400000, 100)\n",
-      "(1309281, 300)\n"
+      "(1309278, 300)\n"
      ]
     }
    ],
